--- a/champion/templates/login.html
+++ b/champion/templates/login.html
@@ -424,7 +424,7 @@
             <button type="submit" class="btn btn-primary">Login</button>
         </form>
         <p>Forgot your password? <a href="{% url 'password_reset' %}">Reset it here</a></p>
-        <p>Don't have an account? <a href="{% url 'apply' %}">Register here</a></p>
+        <p>Don't have an account? <a href="{% url 'membership_portal' %}">Register here</a></p>
     </div>
 
     <script>
