--- a/champion/templates/index.html
+++ b/champion/templates/index.html
@@ -382,6 +382,10 @@
             transition: none !important;
             transform: translateY(0px) !important;
     box-shadow: none !important;
+    padding:0 !important;
+        }
+        .logo-link{
+            padding:0 !important;
         }
 
     </style>
