updated more files fix minor changes

--- a/champion/static/css/styles.css
+++ b/champion/static/css/styles.css
@@ -611,6 +611,7 @@ body {
     .left-container ul,
     .right-container ul {
         padding-left: 0;
+        font-size:0.8rem;
         
     }
 
