--- a/champion/templates/about_us.html
+++ b/champion/templates/about_us.html
@@ -306,7 +306,21 @@
     font-size: 16px !important;
     margin-top:180px !important;
 }
-@media screen and (max-width: 1268px){
+@media screen and (max-width: 1590px){
+    .winners-section {
+        display: flex;
+        height: auto; /* Full height section */
+        align-items: center;
+    }
+    .winners-content {
+        width: 40%;
+        padding: 1px 50px;
+        padding-bottom: 0;
+        background-color: #000; /* Black background for the text content */
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
     .upper-text{
     font-size: 16px !important;
     margin-top:0px !important;
