--- a/champion/templates/support_request.html
+++ b/champion/templates/support_request.html
@@ -25,6 +25,16 @@
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
         }
+        @media (max-width:1068px){
+            .container {
+                max-width: 1200px;
+                margin: 90px auto;
+                
+                padding: 30px;
+                border-radius: 8px;
+                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            }
+        }
 
         h1 {
             color: #fff;
@@ -243,7 +253,7 @@
     <section id="dividing-section">
 
     </section>
-    <div class="container mt-5">
+    <div class="container">
         <h1>We’re Here to Help</h1>
         <p class="lead">At The Champions Club, your satisfaction is our priority. We understand that sometimes you might encounter challenges or have questions, and we're committed to providing you with the support you need. Your concerns are important to us, and we're here to address them with the care and attention they deserve.</p>
 
