--- a/champion/templates/video_play.html
+++ b/champion/templates/video_play.html
@@ -255,6 +255,9 @@
 
     </script>
     </section>
+    <section id="dividing-section">
+
+    </section>
     <div class="main-content">
         <!-- Video Section -->
 
