--- a/champion/templates/index.html
+++ b/champion/templates/index.html
@@ -1696,6 +1696,16 @@ document.addEventListener('DOMContentLoaded', () => {
     .join-network-image img {
         max-width: 80%;
     }
+    .learn-more-link {
+        display: inline-flex;
+        align-items: center;
+        font-size: 18px;
+        color: #fff;
+        text-decoration: none;
+        padding-left: 10px;
+        font-weight: 600;
+        margin-top:30px;
+    }
 }
 
 @media (max-width: 768px) {
