--- a/champion/templates/courses_coming_soon.html
+++ b/champion/templates/courses_coming_soon.html
@@ -147,6 +147,9 @@
             .top-navbar{
                 width:98%;
             }
+            .logo{
+                text-align:left;
+            }
             .navbar-profile-img {
                 width: 35px;             /* Adjust width as needed */
                 height: 35px;  
@@ -178,6 +181,7 @@
     </section>
 <style>
     #courses-hero {
+
     background: url("{% static 'images/Courses-back.png' %}");
     background-repeat: no-repeat;
     
@@ -251,6 +255,22 @@
 }
 
 @media (max-width: 768px) {
+    #courses-hero {
+        
+        background: url("{% static 'images/Courses-back.png' %}");
+        background-repeat: no-repeat;
+        
+        background-size: cover;
+        filter: brightness(70%); /* Black background */
+        color: #fff; /* White text */
+        height: 40vh; /* Full viewport height */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        padding: 50px;
+        margin-top:90px;
+    }
     .courses-hero-content h1 {
         font-size: 36px;
     }
@@ -336,6 +356,26 @@ p {
 .explore-button:hover {
     background-color: #e6b800;
 }
+@media (max-width:1060px){
+    .card-container {
+        display: flex;
+        flex-direction:column;
+
+        justify-content: center;
+        gap: 20px;
+        flex-wrap: wrap;
+        margin-top: 2rem;
+    }
+    .card {
+        background-color: #000;
+        padding: 1.5rem;
+        border-radius: 10px;
+        width: 90%;
+        text-align: center;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
+        transition: transform 0.3s;
+    }
+}
 </style>      
     <!-- Carousel and Other Content -->
     <div class="container">
@@ -356,7 +396,7 @@ p {
             <div class="card">
                 <h3>Explore Podcasts</h3>
                 <p>Listen to our latest podcasts covering diverse topics from industry experts.</p>
-                <a href="/podcasts" class="explore-button">Explore Podcasts</a>
+                <a href="/video_home" class="explore-button">Explore Podcasts</a>
             </div>
 
             <!-- Shorts Card -->
