--- a/champion/templates/blog_detail.html
+++ b/champion/templates/blog_detail.html
@@ -22,6 +22,13 @@
             margin: 0 auto;
             padding: 20px;
         }
+        @media (max-width:992px){
+            .container {
+                max-width: 800px;
+                margin: 100px auto;
+                padding: 20px;
+            }
+        }
 
         .blog-content {
             margin-bottom: 20px;
