--- a/champion/templates/blog_detail.html
+++ b/champion/templates/blog_detail.html
@@ -10,6 +10,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body {
+            -webkit-touch-callout: none;
+-webkit-user-select: none;
+-khtml-user-select: none;
+-moz-user-select: none;
+-ms-user-select: none;
+user-select: none;
             font-family: Arial, sans-serif;
             background-color: #000;
             color: #fff;
