--- a/champion/templates/blog_list.html
+++ b/champion/templates/blog_list.html
@@ -24,6 +24,13 @@
             margin: 3% auto;
             padding: 20px;
         }
+        @media (max-width:992px){
+            .container {
+                max-width: 1400px;
+                margin: 100px auto;
+                padding: 20px;
+            }
+        }
 
         /* Search and Filter Form */
         .search-filter {
