--- a/champion/static/css/styles.css
+++ b/champion/static/css/styles.css
@@ -537,7 +537,7 @@ body {
 .right-container {
     
     flex: 1;
-    min-width: 300px; /* Ensure the containers don't get too narrow */
+    /* Ensure the containers don't get too narrow */
     margin: 30px;
 }
 
@@ -965,6 +965,11 @@ h6 {
 img {
     max-width: 90%;
     border-radius: 4px;
+}
+@media (max-width:1068){
+    img{
+        max-width: 100% !important;
+    }
 }
 
 button {
