--- a/champion/templates/index.html
+++ b/champion/templates/index.html
@@ -30,6 +30,16 @@
    
       
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WRN3TFB4K5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-WRN3TFB4K5');
+</script>
+
 
 <body>
     <style>
