--- a/champion/templates/membership_portal.html
+++ b/champion/templates/membership_portal.html
@@ -848,7 +848,7 @@
           }
           
           .card-image[aria-label="Associate1"] {
-            background-image: url("{% static 'images/associate.jpg' %}");
+            background-image: url("{% static 'images/associate.webp' %}");
           }
           
           .card-image[aria-label="Partner1"] {
