--- a/champion/templates/reel_grid.html
+++ b/champion/templates/reel_grid.html
@@ -786,6 +786,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        margin-bottom:10px;
     }
     
     .reel-video {
