--- a/champion/templates/register_partner.html
+++ b/champion/templates/register_partner.html
@@ -836,7 +836,7 @@
             <a href="#contact" class="cta-button">Get Started</a>
         </div>
         <div class="hero-image">
-            <img src="{% static 'images/TCCBusiness.png' %}" alt="Service Demonstration on Laptop">
+            <img src="{% static 'images/TCC (19).png' %}" alt="Service Demonstration on Laptop">
         </div>
     </div>
 </section>
