--- a/champion/templates/privacy_policy.html
+++ b/champion/templates/privacy_policy.html
@@ -89,18 +89,23 @@
         <!-- Navigation Links -->
         <ul id="nav-links">
             <li><a href="{% url 'home' %}">HOME</a></li>
-            <li><a href="{% url 'news_feed' %}">NEWS</a></li>
+            {% comment %} <li><a href="{% url 'news_feed' %}">NEWS</a></li> {% endcomment %}
           
     
             <!-- Dropdown tab for Resources -->
             <li class="dropdown">
                 <a href="#">RESOURCES</a>
                 <ul class="dropdown-content">
-                    <li class="dropdown-link"><a href="{% url 'blog_list' %}">BLOGS</a></li>
+                    <li class="dropdown-link"><a href="{% url 'coming_soon' %}">NEXUS</a></li>
+                    <li class="dropdown-link"><a href="{% url 'epulum' %}">EPULUM</a></li>
+                    <li class="dropdown-link"><a href="{% url 'historia' %}">HISTORIA</a></li>
+                    <li class="dropdown-link"><a href="{% url 'vita' %}">VITA</a></li>
+                    <li class="dropdown-link"><a href="{% url 'opus' %}">OPUS</a></li>
+                    {% comment %} <li class="dropdown-link"><a href="{% url 'blog_list' %}">BLOGS</a></li>
                     <li class="dropdown-link"><a href="{% url 'reel_grid' %}">SHORTS</a></li>
                     <li class="dropdown-link"><a href="{% url 'events' %}">EVENTS</a></li>
                     <li class="dropdown-link"><a href="{% url 'course_list' %}">COURSES</a></li>
-                    <li class="dropdown-link"><a href="{% url 'video_home' %}">PODCASTS</a></li>  
+                    <li class="dropdown-link"><a href="{% url 'video_home' %}">PODCASTS</a></li>   {% endcomment %}
                 </ul>
             </li>
 
@@ -196,6 +201,9 @@
 }
 
     </script>
+    </section>
+    <section id="dividing-section">
+    
     </section>
     <div class="container mt-5">
         <h1>Privacy Policy</h1>
