--- a/champion/templates/about_us.html
+++ b/champion/templates/about_us.html
@@ -48,11 +48,11 @@
                     <li class="dropdown-link"><a href="{% url 'events' %}">EVENTS</a></li>
                     <li class="dropdown-link"><a href="{% url 'course_list' %}">COURSES</a></li>
                     <li class="dropdown-link"><a href="{% url 'video_home' %}">PODCASTS</a></li>   {% endcomment %}
-                    <li class="dropdown-link"><a href="{% url 'coming_soon' %}">NEXUS</a></li>
-                    <li class="dropdown-link"><a href="{% url 'epulum' %}">EPULUM</a></li>
-                    <li class="dropdown-link"><a href="{% url 'historia' %}">HISTORIA</a></li>
                     <li class="dropdown-link"><a href="{% url 'vita' %}">VITA</a></li>
-                    <li class="dropdown-link"><a href="{% url 'opus' %}">OPUS</a></li>
+                     <li class="dropdown-link"><a href="{% url 'opus' %}">OPUS</a></li>
+                    <li class="dropdown-link"><a href="{% url 'coming_soon' %}">NEXUS</a></li>
+                     <li class="dropdown-link"><a href="{% url 'epulum' %}">EPULUM</a></li>
+                     <li class="dropdown-link"><a href="{% url 'historia' %}">HISTORIA</a></li>
                 </ul>
             </li>
     
@@ -551,7 +551,7 @@
         <p class="upper-text">CRAFTED WITH CARE, DRIVEN BY EXCELLENCE</p>
         <h1>WINNERS UNITED</h1>
         <p>The Champions Club is an invite-only global private network by <strong>Shagun Kalash</strong> where achievers from all around the world connect and celebrate life together.</p>
-        <button>READ MORE</button>
+        <a href="{% url 'membership_portal' %}"><button>READ MORE</button></a>
     </div>
 </section>
 <section id="dividing-section"></section>
