--- a/champion/templates/register_partner.html
+++ b/champion/templates/register_partner.html
@@ -406,7 +406,7 @@
             <!-- Navigation Links -->
             <ul id="nav-links">
                 <li><a href="{% url 'home' %}">HOME</a></li>
-                <li><a href="{% url 'blog_list' %}">NEWS</a></li>
+               
                 
               
         
@@ -414,10 +414,11 @@
                 <li class="dropdown">
                     <a href="#">RESOURCES</a>
                     <ul class="dropdown-content">
-                        <li class="dropdown-link"><a href="{% url 'reel_grid' %}">SHORTS</a></li>
-                        <li class="dropdown-link"><a href="{% url 'video_home' %}">PODCASTS</a></li>
-                        <li class="dropdown-link"><a href="{% url 'course_list' %}">COURSES</a></li>
-                        <li class="dropdown-link"><a href="{% url 'events' %}">EVENTS</a></li>
+                        <li class="dropdown-link"><a href="{% url 'vita' %}">VITA</a></li>
+                        <li class="dropdown-link"><a href="{% url 'opus' %}">OPUS</a></li>
+                       <li class="dropdown-link"><a href="{% url 'coming_soon' %}">NEXUS</a></li>
+                        <li class="dropdown-link"><a href="{% url 'epulum' %}">EPULUM</a></li>
+                        <li class="dropdown-link"><a href="{% url 'historia' %}">HISTORIA</a></li>
                     </ul>
                 </li>
     
